--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -4,7 +4,7 @@
       <h2>Itinerario</h2>
     </div>
     <div class="col-2">
-      <button type="button" class="btn btn-primary">
+      <button type="button" class="btn btn-primary" (click)="showChildModal()">
         Nueva actividad
       </button>
     </div>
@@ -27,3 +27,47 @@
     </div>
   </div>
 </main>
+
+
+<!--Modal-->
+<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1"
+     role="dialog" aria-labelledby="dialog-child-name">
+  <div class="modal-dialog modal-lg full-screen-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-child-name" class="modal-title pull-left">Agregar nueva actividad</h4>
+        <button type="button" class="close pull-right btn-close" aria-label="Close" (click)="hideChildModal()">
+          <span aria-hidden="true" class="visually-hidden">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="submitForm()" #contactForm="ngForm">
+          <div class="form-group">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" class="form-control" [(ngModel)]="formData.name" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" class="form-control" [(ngModel)]="formData.email" required>
+          </div>
+          <div class="form-group">
+            <label for="message">Mensaje:</label>
+            <textarea id="message" name="message" class="form-control" [(ngModel)]="formData.message" required></textarea>
+          </div>
+          <div class="form-group">
+            <label for="message">Fecha:</label>
+            <div class="col-xs-12 col-12 col-md-4 form-group mb-3">
+              <input type="text"
+                     placeholder="Datepicker"
+                     class="form-control"
+                     bsDatepicker
+                     [bsConfig]="{ isAnimated: true }">
+            </div>
+<!--            <textarea id="fecha" name="message" class="form-control" [(ngModel)]="formData.dateFrom" required></textarea>-->
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
