--- a/src/app/task/task.component.scss
+++ b/src/app/task/task.component.scss
@@ -137,3 +137,13 @@ main {
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.full-screen-modal {
+  height: 100vh !important;
+  width: 100vw !important;
+  top: 0;
+  left: 0;
+  margin: 0;
+  background-color: #ffffff;
+  float: right;
+}
