--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -60,6 +60,8 @@
               <input type="text"
                      placeholder="Datepicker"
                      class="form-control"
+                     [bsValue]="formData.dateFrom"
+                    (bsValueChange)="onDateChanged($event)"
                      bsDatepicker
                      [bsConfig]="{ isAnimated: true }">
             </div>
