--- a/src/app/pages/task/task.component.scss
+++ b/src/app/pages/task/task.component.scss
@@ -83,6 +83,14 @@ main {
   margin: 3rem;
 }
 
+.title-drag, .title-box {
+  font-weight: 600;
+}
+
+.count {
+  color: #b4adad;
+}
+
 .example-container {
   width: 200px;
   max-width: 100%;
