--- a/src/app/pages/task/task.component.scss
+++ b/src/app/pages/task/task.component.scss
@@ -163,4 +163,18 @@ main {
 
 .btn-modal {
   margin: 1rem;
+  padding: 0.6rem 1.5rem;
+}
+
+.space-form {
+  margin-top: 1rem;
+}
+
+.space-date {
+  margin-top: 2rem;
+}
+
+.text-label {
+  font-weight: 600;
+  margin-bottom: 0.4rem;
 }
