--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,3 +48,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mdc-icon-button {
   padding: 0;
 }
+
+.modal-header {
+  background: var(--color-primary);
+  color: #ffffff;
+  padding-bottom: 0.4rem;
+}
