Fixed Drag and Drop

--- a/src/app/pages/task/task.component.html
+++ b/src/app/pages/task/task.component.html
@@ -161,6 +161,6 @@
     </button>
   </div>
   <div class="modal-body">
-    No se puede agregar la tarea en la columna debido a que ya existe otra tarea similar
+    No se puede agregar la actividad en la columna debido a que ya existe otra actividad similar
   </div>
 </ng-template>
