--- a/src/app/pages/task/task.component.html
+++ b/src/app/pages/task/task.component.html
@@ -24,9 +24,12 @@
         (cdkDropListDropped)="drop($event, item, templateAlert)">
         <div class="example-box" *ngFor="let t of item.task" cdkDrag>
           <div style="width: 100%; display: flex;">
-            <div class="col-8">
+            <div class="col-3">
+              <img style="width: 90%;" [src]="t.image"/>
+            </div>
+            <div class="col-5">
               <div class="title-box">{{t.title}}</div>
-              <div>{{t.hourTask}}</div>
+              <div class="time-box">{{t.hourTask}}</div>
             </div>
             <div class="col-2">
               <button mat-icon-button (click)="viewTask(template, t)">
@@ -40,6 +43,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row btn-new">
+        <label>+Nueva</label>
       </div>
     </div>
   </div>
