--- a/src/app/pages/task/task.component.scss
+++ b/src/app/pages/task/task.component.scss
@@ -87,12 +87,16 @@ main {
   font-weight: 600;
 }
 
+.title-box, .time-box {
+  padding-left: 0.3rem;
+}
+
 .count {
   color: #b4adad;
 }
 
 .example-container {
-  width: 200px;
+  width: 15rem;
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
@@ -100,7 +104,6 @@ main {
 }
 
 .example-list {
-  border: solid 1px #ccc;
   min-height: 60px;
   background: white;
   border-radius: 4px;
@@ -110,8 +113,9 @@ main {
 
 .example-box {
   padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
+  border: solid 1px #d1d1d1;
   color: rgba(0, 0, 0, 0.87);
+  margin: 1rem auto;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -120,6 +124,8 @@ main {
   cursor: move;
   background: white;
   font-size: 14px;
+  border-radius: 0.5rem;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .cdk-drag-preview {
@@ -136,10 +142,6 @@ main {
 
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-box:last-child {
-  border: none;
 }
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
@@ -177,4 +179,8 @@ main {
 .text-label {
   font-weight: 600;
   margin-bottom: 0.4rem;
+}
+
+.btn-new {
+  color: #9f9d9d;
 }
